@startuml
skinparam monochrome false

package "notifications.domain.model" {
  class Notification {
    - id: string
    - organizationId: string
    - parentId: string
    - tripId: string
    - category: string
    - deliveryState: string
    - message: string
    - sentAt: string
    - alerts: Alert[]
    - announcements: Announcement[]
  }
  class Alert {
    - id: string
    - notificationId: string
    - triggeredAt: string
  }
  class Announcement {
    - id: string
    - notificationId: string
    - routeId: string
    - message: string
    - publishedAt: string
  }
  class Message {
    - id: string
    - title: string
    - content: string
    - timestamp: string
  }
}

package "notifications.application" {
  class NotificationsStore {
    - notifications
    - alerts
    - announcements
    + loadNotificationsByParent(parentId): void
    + loadAlerts(notificationId): void
    + loadAnnouncementsByRoute(routeId): void
    + createNotification(request): void
    + triggerAlert(notificationId): void
    + createAnnouncement(request): void
    + markAsRead(notificationId): void
  }
}

package "notifications.infrastructure" {
  class NotificationsApi {
    + createNotification(request)
    + getNotificationsByParent(parentId)
    + dispatchNotification(id)
    + triggerAlert(request)
    + getAlertsByNotification(notificationId)
    + createAnnouncement(request)
    + getAnnouncementsByRoute(routeId)
  }
  class NotificationAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class AlertAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
  class AnnouncementAssembler {
    + toEntityFromResource(resource)
    + toEntitiesFromResponse(response)
  }
}

package "notifications.presentation.views" {
  class AlertCenterView <<view>> {
    - activeTab: string
    - incidents / notifications / trips
    - unreadCount: number
    - announcementForm
    + loadAlertData(): void
    + markRead(notification): void
    + markAllRead(): void
    + saveIncident(): void
    + saveAnnouncement(): void
    + resolveIncident(incident): void
  }
  class MessageListView <<view>> {
    - messages: Message[]
    + confirmDelete(message): void
  }
  class MessageFormView <<view>> {
    - form
    + saveMessage(): void
  }
}

' ─── Referencias a otros paquetes ────────────────────────────────────────────
package "shared.presentation.components" {
  class Layout {
  }
}

Notification --> Alert
Notification --> Announcement
NotificationsStore ..> "notifications.domain.model.Notification" : uses
NotificationsStore ..> "notifications.domain.model.Alert" : uses
NotificationsStore ..> "notifications.domain.model.Announcement" : uses
NotificationsStore ..> "notifications.infrastructure.NotificationsApi" : uses
NotificationsStore ..> "notifications.infrastructure.NotificationAssembler" : uses
NotificationsStore ..> "notifications.infrastructure.AlertAssembler" : uses
NotificationsStore ..> "notifications.infrastructure.AnnouncementAssembler" : uses
NotificationAssembler ..> "notifications.domain.model.Notification" : creates
AlertAssembler ..> "notifications.domain.model.Alert" : creates
AnnouncementAssembler ..> "notifications.domain.model.Announcement" : creates
AlertCenterView --> "notifications.domain.model.Notification" : uses
AlertCenterView --> "notifications.domain.model.Alert" : uses
AlertCenterView --> "notifications.domain.model.Announcement" : uses
Layout --> AlertCenterView : routes to
Layout --> MessageListView : routes to
Layout --> MessageFormView : routes to
AlertCenterView --> NotificationsStore : uses
MessageListView --> "notifications.domain.model.Message" : uses
MessageFormView --> "notifications.domain.model.Message" : uses
MessageListView --> NotificationsStore : uses
MessageFormView --> NotificationsStore : uses

@enduml
